# serde-mobile

./: Cargo.toml  README.md
examples/: csv.rs
src/: lib.rs
